Documents/MetaDataIO/MetadataIO-distr-33.0.3-bin/repos/src/objects/CovDependencies__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>CovType__c</fullName>
        <label>CovType</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>depCov__c</fullName>
        <label>depCov</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>minDep__c</fullName>
        <label>minDep</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>state__c</fullName>
        <label>state</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>CovDependencies</label>
</CustomObject>